<resources>

    <!-- App -->
    <string name="app_name">Clean architecture</string>

    <!-- Splash -->
    <string name="splash_title_proof_of_concept">Splash Title Proof of Concept</string>
    <string name="album_details_title">Album Details</string>
    <string name="bnav_title_home">Home</string>
    <string name="bnav_title_search">Search</string>
    <string name="bnav_title_wishlist">Wishlist</string>
    <string name="bnav_title_basket">Basket</string>
    <string name="bnav_title_more">More</string>
    <string name="home_activity_title">Home</string>
    <string name="albums">Albums</string>
    <string name="cd_logo">Logo of Curry\'s PC World</string>
    <string name="product">Products</string>
    <string name="bnav_title_products">ProductList</string>
    <string name="products_sort">Sort</string>
    <string name="products_filter">Filter</string>

    <!-- home -->
    <string name="promoted_item_price">£%1$s</string>
    <string name="search_hint">Looking for something?</string>
    <string name="browse_products_label">Browse Products</string>
    <string name="promoted_items_label">Promoted Items</string>
    <string name="menu_barcode_scanning_label">Scan a Barcode</string>

    <!-- Albums -->


    <!-- Album Details -->


</resources>
