<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/bnav_title_home" />

    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/bnav_title_search" />

    <item
        android:id="@+id/bottom_nav_basket"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/bnav_title_basket" />

    <item
        android:id="@+id/bottom_nav_wishlist"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/bnav_title_wishlist" />

    <item
        android:id="@+id/bottom_nav_more"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/bnav_title_more" />

</menu>